<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:fillViewport="true"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.fragment.details.DetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@android:color/black">

            <ImageView
                    android:id="@+id/ivMovieImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:src="@drawable/dark_img"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    android:padding="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    tools:ignore="ContentDescription"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategories"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                tools:listitem="@layout/item_layout_all_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
                android:text="@string/name"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvCharacterName"
                tools:text="@string/name"
                android:textColor="@android:color/white"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/description"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvDescription"
                tools:text="@string/name"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        <TextView
                android:text="@string/related_links"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tvDetails"
                android:text="@string/details"
                android:textSize="17sp"
                android:textColor="@android:color/white"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_disclouser"/>


        <TextView
                android:id="@+id/tvWiki"
                android:text="@string/wiki"
                android:textSize="17sp"
                android:textColor="@android:color/white"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_disclouser"/>

        <TextView
                android:id="@+id/tvComicLink"
                android:text="@string/comiclink"
                android:textSize="17sp"
                android:textColor="@android:color/white"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_disclouser"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
